[package]
name = "lfq"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"

description = "A lock-free multi-producer/multi-consumer broadcast queue backed by a ring buffer."
homepage = "https://github.com/Lytigas/lfq"
repository = "https://github.com/Lytigas/lfq.git"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["concurrency"]
keywords = ["channel","broadcast","lock-free"]


[dependencies]

[dev-dependencies]
criterion = "0.3"
loom = "0.2.9"

[[bench]]
path = "benches/throughput.rs"
name = "throughput"
harness = false
