[package]
name = "aos_sync"
build = "build.rs"
version = "0.1.0"
authors = ["Josh Hejna <josh.hejna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15.0"
lock_api = "0.3.1"

# [features]
# thinlto = []

[build-dependencies]
cc = "1.0"
bindgen = "0.51"
